src/snapshots/eszip__v2__tests__npm_empty_snapshot.snap
---
source: src/v2.rs
expression: bytes
---
[
    69,
    83,
    90,
    73,
    80,
    50,
    46,
    50,
    0,
    0,
    0,
    4,
    0,
    0,
    1,
    32,
    112,
    40,
    159,
    227,
    110,
    119,
    195,
    223,
    84,
    159,
    175,
    23,
    63,
    153,
    70,
    88,
    153,
    143,
    57,
    78,
    228,
    239,
    74,
    120,
    138,
    105,
    15,
    136,
    117,
    162,
    67,
    78,
    0,
    0,
    0,
    104,
    0,
    0,
    0,
    15,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    109,
    97,
    105,
    110,
    46,
    116,
    115,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    29,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    151,
    0,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    0,
    0,
    0,
    0,
    61,
    0,
    0,
    0,
    22,
    0,
    0,
    0,
    183,
    0,
    0,
    0,
    136,
    0,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    97,
    46,
    116,
    115,
    1,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    59,
    133,
    46,
    114,
    145,
    215,
    211,
    173,
    171,
    227,
    187,
    250,
    172,
    206,
    234,
    5,
    137,
    88,
    252,
    251,
    59,
    2,
    34,
    206,
    226,
    249,
    20,
    161,
    111,
    35,
    39,
    58,
    0,
    0,
    0,
    0,
    227,
    176,
    196,
    66,
    152,
    252,
    28,
    20,
    154,
    251,
    244,
    200,
    153,
    111,
    185,
    36,
    39,
    174,
    65,
    228,
    100,
    155,
    147,
    76,
    164,
    149,
    153,
    27,
    120,
    82,
    184,
    85,
    0,
    0,
    0,
    115,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    42,
    32,
    97,
    115,
    32,
    97,
    32,
    102,
    114,
    111,
    109,
    32,
    34,
    46,
    47,
    97,
    46,
    116,
    115,
    34,
    59,
    10,
    47,
    43,
    32,
    46,
    117,
    220,
    233,
    51,
    234,
    223,
    154,
    133,
    115,
    170,
    205,
    173,
    253,
    179,
    31,
    174,
    255,
    191,
    245,
    128,
    155,
    184,
    97,
    88,
    208,
    31,
    136,
    210,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    32,
    61,
    32,
    34,
    98,
    34,
    59,
    10,
    195,
    125,
    168,
    132,
    12,
    51,
    241,
    62,
    31,
    13,
    95,
    201,
    65,
    196,
    80,
    30,
    66,
    11,
    109,
    88,
    13,
    143,
    234,
    241,
    249,
    0,
    6,
    233,
    191,
    196,
    22,
    196,
    0,
    0,
    1,
    95,
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    109,
    97,
    105,
    110,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    91,
    34,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    42,
    32,
    97,
    115,
    32,
    97,
    32,
    102,
    114,
    111,
    109,
    32,
    92,
    34,
    46,
    47,
    97,
    46,
    116,
    115,
    92,
    34,
    59,
    92,
    110,
    34,
    93,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    65,
    65,
    65,
    65,
    44,
    79,
    65,
    65,
    79,
    44,
    75,
    65,
    65,
    75,
    44,
    67,
    65,
    65,
    67,
    44,
    77,
    65,
    65,
    77,
    44,
    83,
    65,
    65,
    83,
    34,
    125,
    79,
    194,
    132,
    55,
    182,
    224,
    203,
    98,
    57,
    201,
    152,
    62,
    64,
    245,
    137,
    255,
    36,
    175,
    196,
    140,
    163,
    133,
    18,
    207,
    247,
    90,
    166,
    210,
    52,
    215,
    4,
    23,
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    91,
    34,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    32,
    61,
    32,
    92,
    34,
    98,
    92,
    34,
    59,
    92,
    110,
    34,
    93,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    65,
    65,
    65,
    65,
    44,
    79,
    65,
    65,
    79,
    44,
    77,
    65,
    65,
    77,
    44,
    73,
    65,
    65,
    73,
    44,
    73,
    65,
    65,
    73,
    34,
    125,
    26,
    44,
    40,
    118,
    218,
    54,
    121,
    253,
    81,
    195,
    246,
    249,
    68,
    48,
    209,
    164,
    51,
    174,
    234,
    185,
    102,
    187,
    120,
    27,
    71,
    183,
    185,
    155,
    20,
    75,
    21,
    19,
]
