src/snapshots/eszip__v2__tests__npm_packages.snap
---
source: src/v2.rs
expression: bytes
---
[
    69,
    83,
    90,
    73,
    80,
    50,
    46,
    50,
    0,
    0,
    0,
    4,
    0,
    0,
    1,
    32,
    112,
    40,
    159,
    227,
    110,
    119,
    195,
    223,
    84,
    159,
    175,
    23,
    63,
    153,
    70,
    88,
    153,
    143,
    57,
    78,
    228,
    239,
    74,
    120,
    138,
    105,
    15,
    136,
    117,
    162,
    67,
    78,
    0,
    0,
    0,
    156,
    0,
    0,
    0,
    15,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    109,
    97,
    105,
    110,
    46,
    116,
    115,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    29,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    151,
    0,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    0,
    0,
    0,
    0,
    61,
    0,
    0,
    0,
    22,
    0,
    0,
    0,
    183,
    0,
    0,
    0,
    136,
    0,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    97,
    46,
    116,
    115,
    1,
    0,
    0,
    0,
    12,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    0,
    0,
    0,
    3,
    100,
    64,
    53,
    2,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    12,
    112,
    97,
    99,
    107,
    97,
    103,
    101,
    64,
    94,
    49,
    46,
    50,
    2,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    10,
    112,
    97,
    99,
    107,
    97,
    103,
    101,
    64,
    94,
    49,
    2,
    0,
    0,
    0,
    0,
    145,
    219,
    156,
    117,
    220,
    185,
    0,
    4,
    7,
    29,
    131,
    211,
    94,
    210,
    170,
    83,
    205,
    34,
    171,
    27,
    56,
    123,
    73,
    98,
    50,
    85,
    160,
    109,
    92,
    161,
    51,
    119,
    0,
    0,
    0,
    158,
    0,
    0,
    0,
    13,
    112,
    97,
    99,
    107,
    97,
    103,
    101,
    64,
    49,
    46,
    50,
    46,
    50,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    1,
    97,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    98,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    7,
    97,
    64,
    50,
    46,
    50,
    46,
    51,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    7,
    98,
    64,
    49,
    46,
    50,
    46,
    51,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    18,
    115,
    111,
    109,
    101,
    111,
    116,
    104,
    101,
    114,
    115,
    112,
    101,
    99,
    105,
    102,
    105,
    101,
    114,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    7,
    99,
    64,
    49,
    46,
    49,
    46,
    49,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    7,
    100,
    64,
    53,
    46,
    48,
    46,
    48,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    101,
    0,
    0,
    0,
    5,
    0,
    0,
    0,
    7,
    101,
    64,
    54,
    46,
    48,
    46,
    48,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    100,
    0,
    0,
    0,
    4,
    221,
    29,
    128,
    137,
    35,
    240,
    91,
    135,
    244,
    80,
    141,
    20,
    35,
    99,
    227,
    104,
    72,
    84,
    52,
    67,
    57,
    235,
    236,
    243,
    144,
    220,
    92,
    113,
    57,
    17,
    112,
    36,
    0,
    0,
    0,
    115,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    42,
    32,
    97,
    115,
    32,
    97,
    32,
    102,
    114,
    111,
    109,
    32,
    34,
    46,
    47,
    97,
    46,
    116,
    115,
    34,
    59,
    10,
    47,
    43,
    32,
    46,
    117,
    220,
    233,
    51,
    234,
    223,
    154,
    133,
    115,
    170,
    205,
    173,
    253,
    179,
    31,
    174,
    255,
    191,
    245,
    128,
    155,
    184,
    97,
    88,
    208,
    31,
    136,
    210,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    32,
    61,
    32,
    34,
    98,
    34,
    59,
    10,
    195,
    125,
    168,
    132,
    12,
    51,
    241,
    62,
    31,
    13,
    95,
    201,
    65,
    196,
    80,
    30,
    66,
    11,
    109,
    88,
    13,
    143,
    234,
    241,
    249,
    0,
    6,
    233,
    191,
    196,
    22,
    196,
    0,
    0,
    1,
    95,
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    109,
    97,
    105,
    110,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    91,
    34,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    42,
    32,
    97,
    115,
    32,
    97,
    32,
    102,
    114,
    111,
    109,
    32,
    92,
    34,
    46,
    47,
    97,
    46,
    116,
    115,
    92,
    34,
    59,
    92,
    110,
    34,
    93,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    65,
    65,
    65,
    65,
    44,
    79,
    65,
    65,
    79,
    44,
    75,
    65,
    65,
    75,
    44,
    67,
    65,
    65,
    67,
    44,
    77,
    65,
    65,
    77,
    44,
    83,
    65,
    65,
    83,
    34,
    125,
    79,
    194,
    132,
    55,
    182,
    224,
    203,
    98,
    57,
    201,
    152,
    62,
    64,
    245,
    137,
    255,
    36,
    175,
    196,
    140,
    163,
    133,
    18,
    207,
    247,
    90,
    166,
    210,
    52,
    215,
    4,
    23,
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    102,
    105,
    108,
    101,
    58,
    47,
    47,
    47,
    98,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    91,
    34,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    99,
    111,
    110,
    115,
    116,
    32,
    98,
    32,
    61,
    32,
    92,
    34,
    98,
    92,
    34,
    59,
    92,
    110,
    34,
    93,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    65,
    65,
    65,
    65,
    44,
    79,
    65,
    65,
    79,
    44,
    77,
    65,
    65,
    77,
    44,
    73,
    65,
    65,
    73,
    44,
    73,
    65,
    65,
    73,
    34,
    125,
    26,
    44,
    40,
    118,
    218,
    54,
    121,
    253,
    81,
    195,
    246,
    249,
    68,
    48,
    209,
    164,
    51,
    174,
    234,
    185,
    102,
    187,
    120,
    27,
    71,
    183,
    185,
    155,
    20,
    75,
    21,
    19,
]
