src/snapshots/eszip__v2__tests__opaque_data.snap
---
source: src/v2.rs
expression: bytes
---
[
    69,
    83,
    90,
    73,
    80,
    95,
    86,
    50,
    0,
    0,
    0,
    31,
    0,
    0,
    0,
    9,
    43,
    115,
    47,
    102,
    111,
    111,
    98,
    97,
    114,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    250,
    21,
    52,
    146,
    255,
    144,
    53,
    201,
    253,
    175,
    16,
    119,
    73,
    63,
    244,
    98,
    17,
    221,
    196,
    236,
    62,
    90,
    239,
    109,
    174,
    147,
    227,
    101,
    243,
    181,
    219,
    32,
    0,
    0,
    0,
    35,
    1,
    2,
    3,
    3,
    144,
    88,
    198,
    242,
    192,
    203,
    73,
    44,
    83,
    59,
    10,
    77,
    20,
    239,
    119,
    204,
    15,
    120,
    171,
    204,
    206,
    213,
    40,
    125,
    132,
    161,
    162,
    1,
    28,
    251,
    129,
    0,
    0,
    0,
    0,
]
